Smoother vendor detail transition

--- a/app/frontend/src/app/app.component.html
+++ b/app/frontend/src/app/app.component.html
@@ -179,6 +179,9 @@
             <a [routerLink]="['/about']">About</a>
           </li>
           <li>
+            <a [routerLink]="['/search']">Advanced Search</a>
+          </li>
+          <li>
             <a [routerLink]="['/contracts']">Contracts</a>
           </li>
           <li>
