--- a/app/frontend/src/app/pages/search/tbl-vendors.component.html
+++ b/app/frontend/src/app/pages/search/tbl-vendors.component.html
@@ -29,7 +29,7 @@
         <tbody>
             <tr *ngFor="let item of vendors.vendors; let i = index">
                 <td><span [innerHTML]="getRowNum(i)"></span>.</td>
-                <td scope="row"><a [routerLink]="['/vendor', item.duns]" queryParamsHandling="preserve">{{item.name
+                <td scope="row"><a (click)="showVendorDetails(item.duns)">{{item.name
                         | titlecase}}</a></td>
                 <td>{{item.contracts}}</td>
                 <td [class.hide]="!sbd_col" class="sbd" [innerHtml]="returnSetAside(item.setasides, 'SB') ? '&bull;' : ''"></td>
