--- a/app/frontend/src/app/pages/search/filters/filter-agency-performance.component.html
+++ b/app/frontend/src/app/pages/search/filters/filter-agency-performance.component.html
@@ -20,5 +20,5 @@
       + ' - ' + agency.description}}
     </li>
   </ul>
-
+  <discovery-filter-selected [id]="'msg-agency-selected'" [label]="'Added agency'"></discovery-filter-selected>
 </div>
