--- a/app/frontend/src/app/pages/search/filters/filter-contract-obligated-amount.component.html
+++ b/app/frontend/src/app/pages/search/filters/filter-contract-obligated-amount.component.html
@@ -13,5 +13,5 @@
 
     </ul>
   </fieldset>
-
+  <discovery-filter-selected [id]="'msg-oblicated-selected'" [label]="'Filter selected'"></discovery-filter-selected>
 </div>
