--- a/app/frontend/src/app/pages/search/filters/filter-contract-vehicles.component.html
+++ b/app/frontend/src/app/pages/search/filters/filter-contract-vehicles.component.html
@@ -12,10 +12,5 @@
       </li>
     </ul>
   </fieldset>
-  <!-- <div class="usa-alert usa-alert-success">
-    <div class="usa-alert-body">
-      <h3 class="usa-alert-heading">Filter Selected.</h3>
-      <p class="usa-alert-text">Submit your search to see results.</p>
-    </div>
-  </div> -->
+  <discovery-filter-selected [id]="'msg-vehicles-selected'" [label]="'Filter selected'"></discovery-filter-selected>
 </div>
