--- a/app/frontend/src/app/pages/search/filters/filter-sbd.component.html
+++ b/app/frontend/src/app/pages/search/filters/filter-sbd.component.html
@@ -12,4 +12,5 @@
       </li>
     </ul>
   </fieldset>
+  <discovery-filter-selected [id]="'msg-sbd-selected'" [label]="'Filter selected'"></discovery-filter-selected>
 </div>
