--- a/app/frontend/src/app/pages/search/tbl-vendors.component.html
+++ b/app/frontend/src/app/pages/search/tbl-vendors.component.html
@@ -5,7 +5,9 @@
             ?
             'Show' : 'Hide'}} Small Business Designation</button>
     </div>
-
+    <div>
+        <h3 class="alt"><strong>{{items_total}} vendors</strong> meet your criteria.</h3>
+    </div>
     <table class="usa-table-borderless">
         <thead>
             <tr>
