--- a/app/frontend/src/app/pages/welcome/welcome.component.html
+++ b/app/frontend/src/app/pages/welcome/welcome.component.html
@@ -7,24 +7,29 @@
     </div>
     <div class="usa-width-one-whole pad-top">
       <div class="usa-width-one-fourth">
-        <h2>OASIS</h2>
-        <p>One Acquisition Solution for Integrated Service</p>
-        <button class="usa-button-secondary" aria-label="Learn more about OASIs" [routerLink]="['/oasis']">Learn more</button>
+        <a [routerLink]="['/oasis']" class="vehicle animated">
+          <h2>OASIS</h2>
+          <p>One Acquisition Solution for Integrated Service</p>
+        </a>
+
       </div>
       <div class="usa-width-one-fourth">
-        <h2>BMO</h2>
-        <p>Building Maintenance and Operations</p>
-        <button class="usa-button-secondary" aria-label="Learn more about BMO" [routerLink]="['/bmo']">Learn more</button>
+        <a [routerLink]="['/bmo']" class="vehicle animated">
+          <h2>BMO</h2>
+          <p>Building Maintenance and Operations</p>
+        </a>
       </div>
       <div class="usa-width-one-fourth">
-        <h2>HCaTS</h2>
-        <p>Human Capital and Training Solutions</p>
-        <button class="usa-button-secondary" aria-label="Learn more about HCaTS" [routerLink]="['/hcats']">Learn more</button>
+        <a [routerLink]="['/hcats']" class="vehicle animated">
+          <h2>HCaTS</h2>
+          <p>Human Capital and Training Solutions</p>
+        </a>
       </div>
       <div class="usa-width-one-fourth">
-        <h2>PSS</h2>
-        <p>Professional Services Schedule</p>
-        <button class="usa-button-secondary" aria-label="Learn more about PSS" [routerLink]="['/pss']">Learn more</button>
+        <a [routerLink]="['/pss']" class="vehicle animated">
+          <h2>PSS</h2>
+          <p>Professional Services Schedule</p>
+        </a>
       </div>
     </div>
   </section>
