--- a/app/frontend/src/app/common/hero.component.html
+++ b/app/frontend/src/app/common/hero.component.html
@@ -2,12 +2,12 @@
   <div class="usa-grid">
     <div class="usa-width-one-whole text-center">
       <h2>
-        <span class="usa-hero-callout-alt">Find the contract to meet your needs.</span>
+        <span class="usa-hero-callout-alt">Search by keywords, NAICS or PSC to compare contracts</span>
       </h2>
       <div id="search-gen" role="search">
         <div class="autocomplete">
-          <input #keywordInput id="hero-keywords-input" pattern=".+" type="text" [(ngModel)]="keywords" name="keywords" placeholder="Start typing your keywords..."
-            autocomplete="off">
+          <input #keywordInput id="hero-keywords-input" pattern=".+" type="text" [(ngModel)]="keywords" name="keywords"
+            placeholder="Start typing your keywords..." autocomplete="off">
           <button type="submit" (click)="searchKeywords()" [disabled]="keywords.length === 0">
             <span class="usa-search-submit-text">Search</span>
           </button>
