--- a/app/frontend/src/app/pages/search/filters/filter-keywords.component.html
+++ b/app/frontend/src/app/pages/search/filters/filter-keywords.component.html
@@ -9,8 +9,8 @@
       <discovery-spinner *ngIf="keywords_results.length === 0"></discovery-spinner>
       <input id="keywords-input" class="items-input" pattern=".+" type="text" [(ngModel)]="keywords" name="keywords"
         [disabled]="keywords_results.length === 0" [placeholder]="placeholder" autocomplete="off">
-      <button class="icon-plus btn-plus" type="submit" (click)="addKeywords()" [disabled]="keywords.length === 0">
-        <span class="usa-sr-only">Add Keyword to list</span>
+      <button class="btn-add pull-right" type="submit" (click)="addKeywords()" [disabled]="keywords.length === 0">
+        <span>Add</span>
       </button>
     </div>
 
@@ -21,4 +21,5 @@
           {{keyword.value}}</span></a>{{keyword.description}}
     </li>
   </ul>
+  <discovery-filter-selected [id]="'msg-keyword-selected'" [label]="'Added keyword'"></discovery-filter-selected>
 </div>
