--- a/app/frontend/src/app/pages/search/filters/filter-naics.component.html
+++ b/app/frontend/src/app/pages/search/filters/filter-naics.component.html
@@ -9,8 +9,8 @@
       <option *ngFor="let item of items_filtered" value="{{item.code}}">{{item.code + ' - ' +
         item.description}}</option>
     </select>
-    <button class="icon-plus btn-plus" type="submit" (click)="addNaic()" [disabled]="!items || naic === '0'">
-      <span class="usa-sr-only">Add NAIC to list</span>
+    <button class="btn-add" type="submit" (click)="addNaic()" [disabled]="!items || naic === '0'">
+      <span>Add</span>
     </button>
   </div>
 
@@ -20,4 +20,5 @@
       + ' - ' + naic.description}}
     </li>
   </ul>
+  <discovery-filter-selected [id]="'msg-naics-selected'" [label]="'Added NAIC code'"></discovery-filter-selected>
 </div>
