Fixing some build file locations in the Django Angular app template.

--- a/app/discovery/templates/index.html
+++ b/app/discovery/templates/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="{% static 'frontend/favicon.ico' %}">
     <link rel="stylesheet" href="{% static 'frontend/assets/uswds/css/uswds.min.css' %}">
+    <link rel="stylesheet" href="{% static 'frontend/styles.css' %}">
 </head>
 
 <body>
@@ -26,9 +27,7 @@
     <script type="text/javascript" src="{% static 'frontend/assets/js/autocomplete.js' %}"></script>
     <script type="text/javascript" src="{% static 'frontend/runtime.js' %}"></script>
     <script type="text/javascript" src="{% static 'frontend/polyfills.js' %}"></script>
-    <script type="text/javascript" src="{% static 'frontend/styles.js' %}"></script>
     <script type="text/javascript" src="{% static 'frontend/scripts.js' %}"></script>
-    <script type="text/javascript" src="{% static 'frontend/vendor.js' %}"></script>
     <script type="text/javascript" src="{% static 'frontend/main.js' %}"></script>
 </body>
 
