--- a/app/frontend/src/app/pages/search/tbl-contract-history.component.html
+++ b/app/frontend/src/app/pages/search/tbl-contract-history.component.html
@@ -30,10 +30,10 @@
   <a href="assets/download-csv.html?vendor={{duns}}&{{params}}" target="_blank">
     Download
     vendor data(CSV)</a></div> -->
-<div class="pad-bottom text-right" *ngIf="!history_no_results">
+<!-- <div class="pad-bottom text-right" *ngIf="!history_no_results">
   <a href="/vendor/{{duns}}/csv/?{{params}}" target="_blank">
     Download
-    vendor data(CSV)</a></div>
+    vendor data(CSV)</a></div> -->
 <div id="overflow-contract-history" class="pad-bottom">
   <!-- Start Scroll Window -->
   <div class="scroll-view-topscroll scrollbar">
