--- a/app/frontend/src/app/pages/search/filters/filter-psc.component.html
+++ b/app/frontend/src/app/pages/search/filters/filter-psc.component.html
@@ -2,20 +2,13 @@
   {{name}}
 </button>
 <div id="{{id}}" class="usa-accordion-content" [attr.aria-hidden]="!opened">
-  <div class="usa-search form-horizontal">
-    <span *ngIf="items_filtered.length===0">There are <strong>no PSCs</strong> for the selected vehicle(s).</span>
-    <select id="select_psc" [disabled]="items_filtered.length===0" [(ngModel)]="psc" class="items-input">
-      <option value="0" selected="selected">Select PSC --</option>
-      <option *ngFor="let item of items_filtered" value="{{item.code}}">{{item.code}} - {{item.description}}</option>
-    </select>
-    <button class="btn-add" type="submit" (click)="addPSC()" [disabled]="!items || psc === '0'">
-      <span>Add</span>
-    </button>
+  <div class="usa-search">
+    <discovery-autocomplete (emitCode)="addKeywords($event)" [id]="id" [placeholder]="placeholder" [keywords_results]="keywords_results"></discovery-autocomplete>
   </div>
   <ul *ngIf="items_selected" class="items-selected">
-    <li *ngFor="let psc of items_selected">
-      <a (click)="removeItem(psc.value)" title="Remove {{psc.description}}"><span class="usa-sr-only">Remove
-          {{psc.value}} - {{psc.description}}</span></a>{{psc.description}}
+    <li *ngFor="let keyword of items_selected">
+      <a (click)="removeItem(keyword.value)" title="Remove {{keyword.description}}"><span class="usa-sr-only">Remove
+          {{keyword.value}}</span></a>{{keyword.description}}
     </li>
   </ul>
   <discovery-filter-selected [id]="'msg-psc-selected'" [label]="'Added PSC code'"></discovery-filter-selected>
