--- a/app/frontend/src/styles.css
+++ b/app/frontend/src/styles.css
@@ -462,6 +462,12 @@ ul.items-selected li a {
 }
 /* END Animate styles */
 /* START Auto Complete Styles */
+.input-error {
+  background-color: #f5c7c7;
+}
+.easy-autocomplete .easy-autocomplete-container {
+  width: 500px !important;
+}
 .autocomplete {
   position: relative;
   display: inline-block;
@@ -502,7 +508,7 @@ ul.items-selected li a {
   color: #ffffff;
 }
 #search-gen {
-  width: 665px !important;
+  width: 550px !important;
   padding: 30px 0;
   margin: auto;
 }
@@ -512,7 +518,6 @@ ul.items-selected li a {
   margin-top: 0px !important;
 }
 #search-gen #hero-keywords-input {
-  width: 500px;
   display: inline-block;
   border-color: white;
 }
@@ -543,7 +548,13 @@ ul.items-selected li a {
   width: 100%;
   min-height: 35px;
 }
-
+.input-spinner {
+  background-image: url(/assets/images/input-loader.gif);
+  background-repeat: no-repeat;
+  background-size: auto 50%;
+  background-position: 8px 50%;
+  padding-left: 40px;
+}
 /* END Auto Complete Styles */
 /* START CSS Overrides For USWDS Styles */
 body {
