--- a/app/discovery/templates/rest_framework/docs/index.html
+++ b/app/discovery/templates/rest_framework/docs/index.html
@@ -6,15 +6,8 @@
         <title>{% block title %}Discovery{% endblock %}</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="{% static 'discovery_site/images/favicon.ico' %}" />
-
-        <!--[if gte IE 7]><!-->
-        <link rel="stylesheet" href="{% static 'discovery_site/css/layouts/discovery.css' %}">
-        <!--<![endif]-->
-
-        <!--[if lte IE 8]>
-        <link rel="stylesheet" href="{% static 'discovery_site/css/layouts/discovery-old-ie.css' %}">
-        <![endif]-->
+        <link rel="shortcut icon" href="{% static 'frontend/favicon.ico' %}" />
+        <link rel="stylesheet" href="{% static 'discovery_site/css/api-docs.css' %}">
 
         <link href="{% static 'rest_framework/docs/css/bootstrap.min.css' %}" rel="stylesheet">
         <link href="{% static 'rest_framework/docs/css/bootstrap-theme.min.css' %}" rel="stylesheet">
@@ -29,33 +22,31 @@
     </head>
 
     <body data-spy="scroll" data-target="#sidebar-nav" data-offset="50">
-        <div id="banner">
-            <div class="container">
-                <a id="skiptocontent" href="#skip">skip to main content</a>
-                <p id="usa">
-                    <img src="{% static "discovery_site/images/flag_usa.png" %}" alt="USA flag" />
-                    An official website of the U.S. government
-                </p>
-                <p id="site-status">This website is in beta.</p>
-            </div>
-        </div>
-
-        <div id="page_top_container">
-            <div id="discovery_header">
-                <div id="page_title">
-                    <a href="/">
-                        <div class="oasis_title"><img alt="Discovery Logo" width="341px" height="55px" src="{% static "discovery_site/images/discovery.png" %}" />
-                        </div>
-                    </a>
-                </div><!--end page_title<!-->
-            </div><!--end header<!-->
-        </div><!--end page_top_container<!-->
-
         {% include "rest_framework/docs/sidebar.html" %}
 
-        <div class="container" id="main">
+        <div id="main">
+            <div id="banner">
+                <div>
+                    <p id="usa">
+                        <img src="{% static "discovery_site/images/flag_usa.png" %}" alt="USA flag" />
+                        An official website of the U.S. government
+                    </p>
+                    <p id="site-status">This website is in beta.</p>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-md-12 main-container">
+                    <div id="page_top_container">
+                        <div id="discovery_header">
+                            <div id="page_title">
+                                <a href="/">
+                                    <div id="discovery_logo"><img alt="Discovery Logo" width="341px" height="55px" src="{% static "discovery_site/images/discovery.png" %}" />
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
                     {% include "rest_framework/docs/document.html" %}
                 </div>
             </div>
